# c-cometd-client

./: .gitignore  CMakeLists.txt  Makefile.am  README  README.md  autogen.sh  cleanbuild.sh  cleantest.sh  cometd_suppressions.supp  configure.ac  valgrind.sh
cmake/: FindCheck.cmake
examples/: CMakeLists.txt  async.c  basic.c  single_threaded.c  stress.c  yammer.c
include/: cometd.h
include/cometd/: channel.h  conn.h  error.h  event.h  ext.h  http.h  inbox.h  json.h  loop.h  msg.h  transport.h  transport_long_polling.h
include/cometd/exts/: logger.h  yammer.h
notes/: api.txt  what_cometd_listen_should_look_like.c
scripts/: cleanbuild.sh  cleantest.sh  cometd_suppressions.supp  debug.sh  rebuild.sh  test.sh  test_server.sh  valgrind.sh
src/: CMakeLists.txt  Makefile.am  channel.c  channel.h  cometd.c  cometd.h  cometd_json.c  cometd_json.h  cometd_msg.c  cometd_msg.h  conn.c  conn.h  error.c  error.h  event.c  event.h  ext.c  ext.h  http.c  http.h  inbox.c  inbox.h  json.c  json.h  loop.c  loop.h  main.c  msg.c  msg.h  transport.c  transport.h  transport_long_polling.c  transport_long_polling.h
src/exts/: logger.c  logger.h  yammer.c  yammer.h
src/loops/: gthread.c
tests/: CMakeLists.txt  Makefile.am  check_channel.c  check_cometd.c  check_cometd.h  check_cometd_inbox.c  check_cometd_integration.c  check_cometd_json_stress.c  check_cometd_main.c  check_cometd_msg.c  check_conn.c  check_error.c  check_event.c  check_ext.c  check_http.c  check_http.h  check_inbox.c  check_msg.c  check_test_helper.c  check_transport.c  test_helper.c  test_helper.h
tests/fixtures/: advice_reconnect_handshake.json  advice_reconnect_none.json  advice_reconnect_null.json  advice_reconnect_retry.json  connect_payload.json  handshake_resp_lp.json  handshake_resp_missing_transports.json  handshake_resp_test_transport.json  handshake_resp_unsupported_transports.json
tests/test_server/: package.json  server.js
